[gd_scene load_steps=7 format=3 uid="uid://drqhsf2p838dn"]

[ext_resource type="Script" path="res://Recipe_book.gd" id="1_uuosd"]
[ext_resource type="Texture2D" uid="uid://b17tccxer0viv" path="res://Assets/requests.png" id="2_0olcj"]
[ext_resource type="Texture2D" uid="uid://dvovauqfa8jrk" path="res://Assets/FamiliarCat.png" id="3_bn8ap"]
[ext_resource type="Texture2D" uid="uid://beoqytgfw6460" path="res://Assets/IngredientSalt.png" id="4_g4ics"]
[ext_resource type="Texture2D" uid="uid://bkedmv3rdakif" path="res://Assets/IngredientMercury.png" id="5_kwc24"]
[ext_resource type="Texture2D" uid="uid://du13os80p7mmg" path="res://Assets/IngredientCinnabar.png" id="6_71j83"]

[node name="Recipes" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_uuosd")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -148.5
offset_top = -197.0
offset_right = 148.5
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0olcj")

[node name="CenterContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -63.0
offset_top = -130.0
offset_right = 69.0
offset_bottom = 37.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Name" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Potion"
horizontal_alignment = 1

[node name="Item" type="TextureRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_bn8ap")
expand_mode = 4
stretch_mode = 5

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
offset_left = 484.0
offset_top = 364.0
offset_right = 670.0
offset_bottom = 417.0
alignment = 1

[node name="Ingredient1" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("4_g4ics")
expand_mode = 2

[node name="Ingredient2" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("5_kwc24")
expand_mode = 2

[node name="Ingredient3" type="TextureRect" parent="HBoxContainer"]
layout_mode = 2
texture = ExtResource("6_71j83")
expand_mode = 2

[node name="Next" type="Button" parent="."]
layout_mode = 0
offset_left = 659.0
offset_top = 303.0
offset_right = 704.0
offset_bottom = 334.0
text = "Next"

[node name="Previous" type="Button" parent="."]
layout_mode = 0
offset_left = 449.0
offset_top = 302.0
offset_right = 500.0
offset_bottom = 333.0
text = "Prev"

[node name="Familiars" type="Button" parent="."]
layout_mode = 0
offset_left = 445.0
offset_top = 105.0
offset_right = 524.0
offset_bottom = 136.0
text = "Familiars"

[node name="Potions" type="Button" parent="."]
layout_mode = 0
offset_left = 531.0
offset_top = 104.0
offset_right = 598.0
offset_bottom = 135.0
text = "Potions"

[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
[connection signal="pressed" from="Previous" to="." method="_on_previous_pressed"]
[connection signal="pressed" from="Familiars" to="." method="_on_familiars_pressed"]
[connection signal="pressed" from="Potions" to="." method="_on_potions_pressed"]
